--- a/perfil/contato.html
+++ b/perfil/contato.html
@@ -7,31 +7,40 @@
     <title>Contato</title>
 </head>
 <body>
-    <ul>
-        <li>
-            <a href="index.html"> Home </a>
-        </li>
-        <li>
-            <a href="contato.html"> Contato </a>
-        </li>    
-        <li>
-            <a href="https://www.linkedin.com/in/marcela-oliveira-2056551b7/"> LinkedIn </a>
-        </li>
-    </ul>
+    <nav><!--tag semantica, não muda a visualização da página mas deixa com mais sentido o código
+    nav é relacionado à parte de links e navegação dentro da página-->
+        <ul>
+            <li>
+                <a href="index.html"> Home </a>
+            </li>
+            <li>
+                <a href="contato.html"> Contato </a>
+            </li>    
+            <li>
+                <a href="https://www.linkedin.com/in/marcela-oliveira-2056551b7/"> LinkedIn </a>
+            </li>
+        </ul>
+    </nav>
 
-    <h1>Entre em contato comigo </h1>
-
-    <form>
-        <label for="nome"> Nome: </label> <br>
-        <input type="text" id="nome">
-        <br><br>
-        <label for="email"> E-mail: </label> <br>
-        <input type="email" id="email">
-        <br><br>
-        <label for="assunto"> Assunto: </label> <br>
-        <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-    </form>
-
+    <header> <!--diferente da head. relacionado ao cabeçalho, a introdução de um determinado texto-->
+        <h1>Entre em contato comigo </h1>
+    </header>
+    <main><!--parte principal do site-->
+        <section><!--uma seção específica do site. neste caso o formulário para contato-->
+            <form>
+                <label for="nome"> Nome: </label> <br>
+                <input type="text" id="nome">
+                <br><br>
+                <label for="data"> Data: </label> <br>
+                <input type="date" id="data">
+                <br><br>
+                <label for="email"> E-mail: </label> <br>
+                <input type="email" id="email">
+                <br><br>
+                <label for="assunto"> Assunto: </label> <br>
+                <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+            </form>
+        </section>
     <br><br>
     <button>Enviar</button>
     <br><br>
@@ -44,6 +53,8 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.0920444370386!2d-46.68193468554297!3d-23.56513746761569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce579d382937a3%3A0xafda2c65b1b769f4!2sR.%20C%C3%B4nego%20Eug%C3%AAnio%20Leite%20-%20Pinheiros%2C%20S%C3%A3o%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1650298883815!5m2!1spt-BR!2sbr" 
     width="300" height="225" style="border:0;" 
     allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </main>
 
+    <footer>Muito Obrigada!</footer>
 </body>
 </html>
