--- a/aula/index.html
+++ b/aula/index.html
@@ -4,37 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--<style>/* css interno */
+        .font-20{
+            font-size: 20px;
+            text-align: justify;
+            color: darkslategray;
+        }
+
+        .align-center{
+            text-align: center;
+        }
+
+        #color1{
+            color: darkgreen;
+            font-size: 50px;
+        }
+
+        #color2{
+            color: green;
+            font-size: 40px;
+        }
+
+        #color3{
+            color: darkolivegreen;
+            font-size: 30px;
+        }
+    </style>-->
+
+    <link rel="stylesheet" href="./estilo.css">
+
     <title>Index</title><!-- Nome que fica na aba da página-->
 </head>
 <body>
     <main>
         <section>
-            <h1>Olá Mundo</h1>
-            <h2>Olá Mundo</h2>
-            <h3>Olá Mundo</h3>
+            <h1 class="align-center" id="color1">Olá Mundo</h1>
+            <h2 class="align-center" id="color2">Olá Mundo</h2>
+            <h3 class="align-center" id="color3">Olá Mundo</h3>
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br>
+            <p class="font-20"> <!--css in line. style="color: darkmagenta; text-align: justify;font-size: 20px; font-weight: bold;"-->
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nam, vel reprehenderit! Velit architecto saepe vitae voluptatibus, 
                 mollitia modi quia accusantium fugiat? Adipisci cum velit ipsum saepe 
                 officia doloremque possimus exercitationem!
             </p>
         </section>
-        <section>
-            <ul>
-                <li>The Walking Dead</li>
-                <li>Rick and Morty</li>
-                <li>Red - Crescer é uma fera</li>
-            </ul>
-        
-            <ol>
-                <li>The Good Place</li>
-                <li>Animais Fantásticos</li>
-                <li>De volta para o futuro</li>
-            </ol>
-        </section>
+        <div class="container">
+            <section class="font-20">
+                <ul>
+                    <li>The Walking Dead </li>
+                    <li>Rick and Morty </li>
+                    <li>Red - Crescer é uma fera  </li>
+                </ul>
+            
+                <ol>
+                    <li>The Good Place </li>
+                    <li>Animais Fantásticos </li>
+                    <li>De volta para o futuro </li>
+                </ol>
+            </section>
 
-        <img src="./assets/poster.jpg" alt="Pôster do filme Capitão Fantástico">
+            <div class="image">
+                <img src="./assets/poster.jpg" alt="Pôster do filme Capitão Fantástico" width="350" height="500">
+            </div>
+        </div>
     </main>
 
     <footer>Fim!</footer>
