alterando tamanho da fonte

--- a/perfil/contato.html
+++ b/perfil/contato.html
@@ -23,7 +23,7 @@
 
     <header class="container"> <!--diferente da head. relacionado ao cabeçalho, a introdução de um determinado texto-->
        
-       <h1 class="titulo">Entre em contato comigo </h1>
+       <h1 class="titulo f40">Entre em contato comigo </h1>
 
        <img class="image" src="./assets/contato.png" alt="ícone de e-mail">
 
